2005-01-24  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c, ptp.h, library.c:
	Implemented EXIF reading by using GetPartialObject.

2005-01-24  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, ptp.c, ptp.h:
        Merged Nikon property dumping patch from
	Steve Harris <steve@totl.net>

2005-01-23  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c, ptp.h: Added ptp_event_issupported helper
          function.

	* library.c: Canon IXUS 2 (and some other IXUSs) 
	  send ObjectRemoved events on deleteobject. We need
	  to read them or we hang the communication.

2005-01-21  Marcus Meissner  <marcus@jet.franken.de>

	* library.c:

	Vegard Engen <vegard@engen.priv.no>
	For Nikon PTP cameras:
	Added Long Exposure settings.
	Added Compression mode setting.

2005-01-21  Hubert Figuiere  <hfiguiere@teaser.fr>

	* ptp-bugs.h: Added file. 

	* library.c (camera_init): Lookup for PTP bug
	(init_ptp_fs): Bug specific workaround (EOS 20D + 300D)
	Added flags for bugs in camera-list.

2005-01-20  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Sony DSC-P120

2005-01-17  Marcus Meissner  <marcus@jet.franken.de>
	
	From Dean Brettle <brettle@users.sourceforge.net>
	* library.c: Use capture date if no modify date is
	  there.
	
2005-01-17  Marcus Meissner  <marcus@jet.franken.de>

	From Vegard Engen <vegard@engen.priv.no>
	* library.c, ptp.h:
	
	  Implemented PTP Property handling for:
	  - generic WhiteBalance
	  - generic ImageSize
	  - Nikon Image Comment

2005-01-17  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added PowerShot SD200.

2005-01-16  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Pass Camera* to property put and get
	  functions too, so we can make vendor based adjustements.

2005-01-15  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Return the correct path and filename
	  on --capture-image.

2005-01-13  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Minolta DIMage Z2 (PictBridge).
